<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8FB08F"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gestion_actividad_titulo"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />

        <!-- Botones superiores -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/btnValorActividad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gestion_actividad_boton_valor_actividad"
                android:backgroundTint="#2C6B53"
                android:textColor="#FFFFFF"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/btnValorCuota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gestion_actividad_boton_valor_cuota"
                android:backgroundTint="#2C6B53"
                android:textColor="#FFFFFF"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gestion_actividad_label_nombre"
            android:textStyle="bold"
            android:layout_marginBottom="3dp"/>

        <!-- Campo nombre -->
        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gestion_actividad_hint_nombre"
            android:layout_marginBottom="16dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gestion_actividad_label_dias"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <!-- Días con checkboxes -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cbLunes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dia_lunes"/>

            <CheckBox
                android:id="@+id/cbMartes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dia_martes" />

            <CheckBox
                android:id="@+id/cbMiercoles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dia_miercoles"/>

            <CheckBox
                android:id="@+id/cbJueves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dia_jueves"/>

            <CheckBox
                android:id="@+id/cbViernes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dia_viernes"/>

            <CheckBox
                android:id="@+id/cbSabado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dia_sabado"/>

            <CheckBox
                android:id="@+id/cbDomingo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dia_domingo"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gestion_actividad_label_horarios"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="2dp"/>

        <!-- Campo horario -->
        <EditText
            android:id="@+id/etHorario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gestion_actividad_hint_horario"
            android:layout_marginBottom="16dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gestion_actividad_label_cupos"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="2dp"/>

        <EditText
            android:id="@+id/etCupo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gestion_actividad_hint_cupo"
            android:layout_marginBottom="20dp"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"/>

        <!-- Botones inferiores -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/btnGrabar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gestion_actividad_boton_grabar"
                android:backgroundTint="#2C6B53"
                android:textColor="#FFFFFF"
                android:layout_marginEnd="12dp"/>

            <Button
                android:id="@+id/btnSalir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gestion_actividad_boton_salir"
                android:backgroundTint="#2C6B53"
                android:textColor="#FFFFFF"/>
        </LinearLayout>


        <include layout="@layout/activity_layout_footer"/>

        <ImageView
            android:id="@+id/imgOnda"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_gravity="bottom"
            android:scaleType="fitXY"
            android:src="@drawable/wave_bg_reverse"
            android:contentDescription="@null" />

    </LinearLayout>

</ScrollView>
