<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include layout="@layout/activity_layout_header"/>
    <EditText
        android:id="@+id/etNameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:hint="@string/crear_cuenta_name"
        android:inputType="text"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        />
    <EditText
        android:id="@+id/etApellidoRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apellido1"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:layout_marginBottom="16dp"
        android:gravity="center" />

    <!-- NUEVO CAMPO PARA EL DNI -->
    <EditText
        android:id="@+id/etDniRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="DNI"
        android:inputType="number"
        android:minHeight="48dp"
        android:layout_marginBottom="16dp"
        android:gravity="center" />

    <EditText
        android:id="@+id/etUsernameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:hint="@string/crear_cuenta_username"
        android:inputType="text"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textSize="18sp" />
    <EditText
        android:id="@+id/etEmailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:hint="@string/ingrese_su_email"
        android:inputType="textEmailAddress"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textSize="18sp"/>


    <EditText
        android:id="@+id/etPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:hint="@string/crear_cuenta_password"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        />
    <Button
        android:id="@+id/buttonCrearCuenta"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/green"
        android:text="@string/crear_cuenta_button"
        android:textSize="18sp"
        android:layout_marginBottom="18dp"
        android:gravity="center"
        />


</LinearLayout>