<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/activity_layout_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:hint="@string/login_username"
            android:inputType="text"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            />
        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/green"
            android:text="@string/login_button"
            android:textSize="18sp"
            android:layout_marginBottom="18dp"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_register"
            android:textSize="18sp"
            android:padding="5dp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forgot_password"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            />

    </LinearLayout>

</LinearLayout>