<?xml version="1.0" encoding="utf-8"?><!-- 1. Usa RelativeLayout como el contenedor raíz -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_menues"
    android:paddingTop="20dp"
    >

    <include layout="@layout/activity_layout_footer" />


    <ScrollView
        android:id="@+id/scrollViewContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cobro_de_actividad"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"/>
            <TextView
                android:id="@+id/tvUsuarioDni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usuario_n_111111"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_gravity="start" />
            <TextView
                android:id="@+id/tvUsuarioNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_xxxxxxxx_xxxxxxx"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_gravity="start" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seleccionar_actividad"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"/>

            <Spinner
                android:id="@+id/spinnerActividades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:background="@android:drawable/btn_dropdown"
                android:layout_marginBottom="15dp"/>
            <TextView
                android:id="@+id/tvDiasActividad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d_as_lun_mar_viernes"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_gravity="start" />
            <TextView
                android:id="@+id/tvHorariosActividad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horarios_13_00_a_16_00"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_gravity="start" />
            <TextView
                android:id="@+id/tvImporteActividad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/importe_20000"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_gravity="start"
                android:layout_marginBottom="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_todo_de_pago"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"/>

            <Spinner
                android:id="@+id/spinnerMetodoPago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:background="@android:drawable/btn_dropdown"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuotas"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"/>

            <Spinner
                android:id="@+id/spinnerCuotas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:background="@android:drawable/btn_dropdown"
                android:layout_marginBottom="15dp"/>




            <Button
                android:id="@+id/buttonCobrarActividad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/green"
                android:text="@string/cobro_de_actividad"
                android:textSize="18sp"

                />




        </LinearLayout>
    </ScrollView>



</RelativeLayout>