<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <include layout="@layout/activity_layout_header"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="12dp"
            android:hint="@string/crear_cuenta_username"
            android:inputType="text"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="12dp"
            android:hint="@string/recuperar_cuenta_correo"
            android:inputType="text"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="12dp"
            android:text="@string/recuperar_cuenta_title"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:gravity="center"/>
        <Button
            android:id="@+id/buttonRecuperar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/green"
            android:text="Enviar"
            android:textSize="18sp"

            />








</LinearLayout>