<?xml version="1.0" encoding="utf-8"?><!-- 1. Usa RelativeLayout como raíz para posicionar el footer abajo -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_menues"
    android:paddingTop="20dp">
    <include layout="@layout/activity_layout_footer" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cobro_de_cuota"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="260dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="32dp"
            android:src="@drawable/logosynergy" />


        <EditText
            android:id="@+id/editTextDniSocio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/ingrese_dni_del_socio"
            android:textSize="24sp"
            android:textStyle="bold"
            android:inputType="number"

            android:padding="12dp"
            android:layout_marginBottom="16dp"

            android:textColor="@android:color/black" />


        <Button
            android:id="@+id/buttonRecuperar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/green"
            android:text="@string/buscar_socio"
            android:textSize="18sp"

            />

    </LinearLayout>



</RelativeLayout>